load("@npm_rules_haskell//webpack-cli:index.bzl", webpack = "webpack_cli")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

webpack(
    name = "webpack",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "asterius_bzl",
    srcs = [
        "asterius_config.bzl",
        "asterius_workspace_rules.bzl",
    ],
    visibility = ["//haskell:__pkg__"],
    deps = [
        "//haskell/platforms",
    ],
)

exports_files(["asterius_webpack_config.js.tpl"])

platform(
    name = "asterius_platform",
    constraint_values = [
        "@platforms//cpu:wasm32",
    ],
)

# Toolchain type for asterius specific tools such as ahc-dist,
# which are not part of the regular haskell toolchain.
toolchain_type(
    name = "asterius-toolchain",
    visibility = ["//visibility:public"],
)
